Reverse account modification
